k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: http-servers
  labels:
    name: http-servers
    app: http-server
