k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
  namespace: http-servers
  labels:
    app: http-server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: http-server
